# Portforge

./: ERD_v2.dbml  README_MSA_SETUP.md  TEAM_ONBOARDING.md  cleanup_project.bat  cleanup_project.py  create_all_tables.bat  create_dynamodb_tables.py  docker-compose.yml  init-db.sql  install_all.bat  pyproject.toml  reset_all_db.py  reset_and_seed_all.bat  seed_all.py  setup.bat  start_services.bat  start_services.py  test_msa_communication.py
Ai/: .env.example  .gitignore  README.md  create_tables.py  docker-compose.yml  pyproject.toml
Ai/app/: main.py
Ai/app/adapters/: dynamodb_adapter.py  internal_adapters.py  s3_adapter.py
Ai/app/api/: ai_data.py
Ai/app/controllers/: __init__.py  ai_controller.py  chat_controller.py
Ai/app/core/: config.py  database.py  exceptions.py  middleware.py
Ai/app/models/: ai_model.py
Ai/app/repositories/: ai_repository.py
Ai/app/schemas/: ai.py  ai_schema.py
Ai/app/services/: ai_service.py  meeting_service.py  portfolio_service.py
Ai/app/utils/: msa_client.py
Ai/migrations/: env.py
Ai/migrations/versions/: 001_create_ai_tables.py
Auth/: .env.example  README.md  create_tables.py  docker-compose.yml  pyproject.toml
Auth/alembic/: env.py
Auth/alembic/versions/: 33d2aca9a36c_reset_schema.py  876cda061eb9_reset_schema.py
Auth/app/: main.py
Auth/app/api/: auth.py  deps.py  users.py
Auth/app/controllers/: __init__.py
Auth/app/core/: config.py  database.py  deps.py  exceptions.py
Auth/app/db/: session.py
Auth/app/models/: enums.py  user.py
Auth/app/schemas/: user.py  user_update.py
Auth/app/utils/: msa_client.py
Auth/migrations/versions/: 001_create_auth_tables.py
FE/: .env.example  App.tsx  README.md  index.css  index.html  metadata.json  package-lock.json  package.json  vite-env.d.ts  vite.config.ts
FE/api/: aiClient.ts  apiClient.ts  chatClient.ts  config.ts
FE/components/: Card.tsx  Footer.tsx  Header.tsx
FE/contexts/: AiContext.tsx  AuthContext.tsx
FE/pages/: AdminPage.tsx  AnnouncementsPage.tsx  ApplicationSuccessPage.tsx  AuthCallbackPage.tsx  DirectChatPage.tsx  EventsPage.tsx  FindAccountPage.tsx  HomePage.tsx  ImageEditorPage.tsx  LoginPage.tsx  MyPage.tsx  PreTestPage.tsx  ProjectDetailPage.tsx  ProjectsPage.tsx  SignUpPage.tsx  TeamCreationPage.tsx  TeamSpacePage.tsx  VerifyEmailPage.tsx
Project_Service/: .env.example  README.md  create_tables.py  docker-compose.yml  my_app_db.sqlite  pyproject.toml  temp_projects.json
Project_Service/app/: main.py
Project_Service/app/api/: applications.py  enriched_projects.py  project_crud.py  projects.py
Project_Service/app/controllers/: __init__.py  application_controller.py  health_controller.py  project_controller.py  project_recruitment_controller.py
Project_Service/app/core/: config.py  database.py  deps.py  exceptions.py  security.py
Project_Service/app/models/: __init__.py  application.py  project.py  project_recruitment.py  report.py
Project_Service/app/repositories/: __init__.py  application_repository.py  base.py  project_recruitment_repository.py  project_repository.py  report_repository.py
Project_Service/app/schemas/: application.py  project.py  project_recruitment.py
Project_Service/app/services/: project_recruitment_service.py  project_service.py
Project_Service/app/storage/: memory_store.py
Project_Service/migrations/: env.py
Project_Service/migrations/versions/: 001_create_project_tables.py
Support_Communication_Service/: .env.example  README.md  create_tables.py  docker-compose.yml  pyproject.toml
Support_Communication_Service/app/: main.py
Support_Communication_Service/app/api/: chat.py
Support_Communication_Service/app/controllers/: __init__.py  admin_controller.py  auth_controller.py  chat_controller.py  content_controller.py  events_controller.py  health_controller.py  notifications_controller.py  projects_controller.py  teams_controller.py  tests_controller.py  users_controller.py
Support_Communication_Service/app/core/: config.py  database.py  deps.py
Support_Communication_Service/app/models/: __init__.py  support.py
Support_Communication_Service/app/schemas/: base.py  chat.py  support.py
Support_Communication_Service/app/services/: banner_service.py  chat_service.py  event_service.py  notice_service.py  notification_service.py  report_service.py
Support_Communication_Service/app/utils/: __init__.py  msa_client.py
Support_Communication_Service/migrations/versions/: 001_create_support_tables.py
Team-BE/: .env.example  .gitignore  README.md  alembic.ini  create_tables.py  pyproject.toml  requirements.txt  run.py
Team-BE/app/: main.py
Team-BE/app/api/: teams.py
Team-BE/app/api/v1/: __init__.py
Team-BE/app/api/v1/endpoints/: __init__.py  team_crud.py  teams.py
Team-BE/app/core/: config.py  database.py
Team-BE/app/models/: __init__.py  enums.py  task.py  team.py  user.py.bak
Team-BE/app/schemas/: __init__.py  team.py  user.py
Team-BE/app/services/: file_service.py  team_service.py
Team-BE/app/utils/: msa_client.py  s3_paths.py
Team-BE/migrations/: env.py
Team-BE/migrations/versions/: .gitkeep  001_create_team_tables.py
